--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=root
 spring.datasource.password=root
-spring.batch.jdbc.initialize-schema = ALWAYS
+#Prevent Spring Batch automatic job trigger
+spring.batch.job.enabled=false
+#spring.batch.jdbc.initialize-schema = ALWAYS
